--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,43 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
+body {
+  font-family: 'Roboto Mono';
+}
+
 .page-border {
   border: 30px solid #f26b38;
   width: 100%;
   height: 100vh;
+}
+
+.left-line {
+  border-left: 30px solid #f26b38;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+}
+
+.right-line {
+  border-right: 30px solid #f26b38;
+  height: 100vh;
+  position: fixed;
+  right: 0;
+}
+
+.top-line {
+  border-top: 30px solid #f26b38;
+  width: 100vw;
+  top: 0;
+  z-index: 1000;
+  position: fixed;
+}
+
+.bottom-line {
+  border-bottom: 30px solid #f26b38;
+  width: 100vw;
+  bottom: 0;
+  z-index: 1000;
+  position: fixed;
 }
 
 .child-center {
@@ -13,7 +49,6 @@
 
 .text-center {
   text-align: center !important;
-  font-family: Poppins;
   font-size: 25px;
   width: 100%;
 }
@@ -26,7 +61,7 @@ span > a {
   float: right;
   margin-left: 30px;
   margin-right: 30px;
-  color: black
+  color: black;
 }
 
 span > a:hover {
@@ -43,15 +78,40 @@ a {
   color: inherit;
   font-size: 16px;
   float: right;
-  margin-top: 30px;
-  margin-right: 10%;
+  margin-top: 80px;
+  margin-right: 6%;
+}
+
+.container {
+  /* margin-top: 100px; */
+  display: inline-grid;
+  padding-top: 1.5%;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  margin-top: 50%;
+  display: block;
+}
+
+.my-pic {
+  height: 20vmin;
+  border-radius: 50%;
+  margin-top: 5%;
+  display: block;
+  margin: auto;
+  align-content: center;
+}
+
+.about-me {
+  font-family: 'Roboto Mono';
+  font-size: small;
 }
 
 /* ====== */
 .glitch {
   text-transform: uppercase;
   width: max-content;
-  letter-spacing: 8.5px;
+  letter-spacing: 2px;
   position: relative;
   color: black;
   font-family: 'Roboto Mono';
