--- a/src/styles.css
+++ b/src/styles.css
@@ -98,14 +98,14 @@ a {
 .nav {
   font-family: 'Roboto Mono';
   background-color: white;
-  width: 96%;
+  /* width: 100%; */
+  display: flex;
   float: right;
   color: inherit;
   font-size: 16px;
   margin-top: 11vh;
-  text-align: right;
-  margin-inline-start: 3em;
-  margin-inline-end: 3em;
+  padding-right: 5%;
+  /* position: fixed; */
 }
 
 .container {
@@ -226,6 +226,7 @@ a {
   grid-template-rows: 70px 100px 70px 70px;
   /* repeat(3, minmax(1px, 0.1fr)); */
   height: 50%;
+  grid-gap: 24px;
 }
 
 .about-title-1 {
@@ -243,6 +244,8 @@ a {
   grid-column: 2/3;
   justify-content: end;
   justify-self: normal;
+  height: auto;
+  width: auto;
   /* justify-items: right; */
 }
 
@@ -263,7 +266,7 @@ a {
 .button-1 {
   grid-row: 4/-1;
   grid-column: 3/-2;
-  
+
   /* justify-content: center; */
 }
 
@@ -305,6 +308,43 @@ a {
   border: 1px solid #f26b38;
   /* padding-top: 10%; */
 }
+
+.col-2-container {
+  display: grid;
+  height: auto;
+  margin: 15%;
+  grid-template-columns: 1fr 1fr;
+  grid-row: repeat(7, 10px);
+  grid-gap: 10px;
+  /* border: 5px solid goldenrod; */
+}
+
+.small-box {
+  display: inline;
+  border: 1px solid #f26b38;
+  color: #f26b38;
+  font-family: 'Roboto Mono';
+  font-size: small;
+}
+
+.experience, 
+.education {
+  padding-left: 15%;
+  font-family: 'Roboto Mono';
+  font-weight: bolder;
+}
+
+.card-title-1 {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  color: #141414;
+}
+
+.card-desc-1 {
+  margin-bottom: 15%;
+  font-size: 13px;
+}
+
 
 /* ====== */
 .glitch {
