--- a/src/styles.css
+++ b/src/styles.css
@@ -312,7 +312,8 @@ a {
 .col-2-container {
   display: grid;
   height: auto;
-  margin: 15%;
+  margin: 10%;
+  margin-bottom: 5%;
   grid-template-columns: 1fr 1fr;
   grid-row: repeat(7, 10px);
   grid-gap: 10px;
@@ -340,6 +341,13 @@ a {
   height: 69%;
 }
 
+.experience > h3, .education > h3, .about-title-1 > h3 {
+  display: inline;
+  font-size: 13px;
+  font-family: 'Roboto Mono';
+  box-shadow: inset 0 -6px 0px #ede574;
+}
+
 .card-title-1 {
   margin-top: 15px;
   margin-bottom: 15px;
@@ -349,6 +357,12 @@ a {
 .card-desc-1 {
   margin-bottom: 15%;
   font-size: 13px;
+}
+
+.gh-card {
+  margin-left: 10%;
+  margin-bottom: 10%;
+  width: auto;
 }
 
 
