--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,8 @@ html {
 }
 
 #home,
-#about {
+#about,
+#projects {
   width: 100vw;
   height: 100vh;
 }
@@ -225,11 +226,12 @@ a {
   grid-template-columns: repeat(6, minmax(100px, 1fr));
   grid-template-rows: 70px 100px 70px 70px;
   /* repeat(3, minmax(1px, 0.1fr)); */
-  height: 50%;
+  /* height: 100vh; */
   grid-gap: 24px;
 }
 
 .about-title-1 {
+  margin-top: 5%;
   grid-row: 1/2;
   grid-column: 2/-2;
   align-content: end;
@@ -341,7 +343,10 @@ a {
   height: 69%;
 }
 
-.experience > h3, .education > h3, .about-title-1 > h3 {
+.experience > h3,
+.education > h3,
+.about-title-1 > h3,
+.projects > h3 {
   display: inline;
   font-size: 13px;
   font-family: 'Roboto Mono';
@@ -365,6 +370,81 @@ a {
   width: auto;
 }
 
+.projects {
+  margin-top: 45%;
+  margin-left: 10%;
+}
+
+.projects-container {
+  display: grid;
+  height: 100vh;
+  grid-gap: 5%;
+  margin-top: 5%;
+  /* width: 75%; */
+  grid-template-columns: repeat(2, 550px);
+  grid-template-rows: repeat(2, 300px);
+}
+
+/* [class*='project-'] {
+  width: 350px;
+} */
+
+.project-1 {
+  grid-row: 1/2;
+  grid-column: 1/2;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: 50px 170px 80px;
+}
+
+.project-2 {
+  grid-row: 1/2;
+  grid-column: 2/3;
+}
+
+.project-3 {
+  grid-row: 2/3;
+  grid-column: 1/2;
+}
+
+.project-4 {
+  grid-row: 2/3;
+  grid-column: 2/3;
+}
+
+.tech-icons-container > a:hover {
+
+}
+.tech-icons {
+  width: 45px;
+  height: 45px;
+  margin: 2%;
+  /* padding: 2%; */
+}
+
+.project-title-1 {
+  grid-row: 1/2;
+}
+
+.tech-stack-1{
+  grid-row: 2/3;
+}
+
+.project-desc-1{
+  grid-row: 3/4;
+  grid-column: 1/3;
+}
+
+.project-img-1 {
+  grid-row: 1/3;
+  grid-column: 2/3;
+  /* padding: 30px; */
+  width: 300px;
+  padding-top: 20%;
+  /* width: 250px; */
+  /* height: 280px; */
+  object-fit: cover;
+}
 
 /* ====== */
 .glitch {
