--- a/src/styles.css
+++ b/src/styles.css
@@ -400,16 +400,25 @@ a {
 .project-2 {
   grid-row: 1/2;
   grid-column: 2/3;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: 50px 170px 80px;
 }
 
 .project-3 {
   grid-row: 2/3;
   grid-column: 1/2;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: 50px 170px 80px;
 }
 
 .project-4 {
   grid-row: 2/3;
   grid-column: 2/3;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: 50px 170px 80px;
 }
 
 .tech-icons-container > a:hover {
@@ -420,6 +429,10 @@ a {
   height: 45px;
   margin: 2%;
   /* padding: 2%; */
+}
+
+.inc-width {
+  width: 55px;
 }
 
 .project-title-1 {
@@ -444,6 +457,14 @@ a {
   /* width: 250px; */
   /* height: 280px; */
   object-fit: cover;
+}
+
+.project-img-2 {
+  grid-row: 1/3;
+  grid-column: 2/3;
+  margin-left: 10%;
+  width: 220px;
+  /* height: 100px; */
 }
 
 /* ====== */
