--- a/src/styles.css
+++ b/src/styles.css
@@ -395,6 +395,7 @@ a {
   display: grid;
   grid-template-columns: repeat(2,1fr);
   grid-template-rows: 50px 170px 80px;
+  border: 1px solid #dfdfdf;
 }
 
 .project-2 {
@@ -403,6 +404,7 @@ a {
   display: grid;
   grid-template-columns: repeat(2,1fr);
   grid-template-rows: 50px 170px 80px;
+  border: 1px solid #dfdfdf;
 }
 
 .project-3 {
@@ -411,6 +413,7 @@ a {
   display: grid;
   grid-template-columns: repeat(2,1fr);
   grid-template-rows: 50px 170px 80px;
+  border: 1px solid #dfdfdf;
 }
 
 .project-4 {
@@ -419,6 +422,7 @@ a {
   display: grid;
   grid-template-columns: repeat(2,1fr);
   grid-template-rows: 50px 170px 80px;
+  border: 1px solid #dfdfdf;
 }
 
 .tech-icons-container > a:hover {
@@ -465,6 +469,13 @@ a {
   margin-left: 10%;
   width: 220px;
   /* height: 100px; */
+}
+
+.project-img-4{
+  grid-row: 1/3;
+  grid-column: 2/3;
+  margin-left: 10%;
+  width: 180px;
 }
 
 /* ====== */
