--- a/src/styles.css
+++ b/src/styles.css
@@ -346,7 +346,8 @@ a {
 .experience > h3,
 .education > h3,
 .about-title-1 > h3,
-.projects > h3 {
+.projects > h3,
+.awards > h3 {
   display: inline;
   font-size: 13px;
   font-family: 'Roboto Mono';
@@ -373,6 +374,7 @@ a {
 .projects {
   margin-top: 45%;
   margin-left: 10%;
+  font-family: 'Roboto Mono';
 }
 
 .projects-container {
@@ -382,7 +384,7 @@ a {
   margin-top: 5%;
   /* width: 75%; */
   grid-template-columns: repeat(2, 550px);
-  grid-template-rows: repeat(2, 300px);
+  grid-template-rows: repeat(2, 350px);
 }
 
 /* [class*='project-'] {
@@ -393,46 +395,67 @@ a {
   grid-row: 1/2;
   grid-column: 1/2;
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 50px 170px 80px;
-  border: 1px solid #dfdfdf;
+  border-top: 5px solid #f26b38;
+  border-left: 1px solid #dfdfdf;
+  border-right: 1px solid #dfdfdf;
+  border-bottom: 1px solid #dfdfdf;
+  padding: 20px;
 }
 
 .project-2 {
   grid-row: 1/2;
   grid-column: 2/3;
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 50px 170px 80px;
-  border: 1px solid #dfdfdf;
+  border-top: 5px solid #f26b38;
+  border-left: 1px solid #dfdfdf;
+  border-right: 1px solid #dfdfdf;
+  border-bottom: 1px solid #dfdfdf;
+  padding: 20px;
 }
 
 .project-3 {
   grid-row: 2/3;
   grid-column: 1/2;
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 50px 170px 80px;
-  border: 1px solid #dfdfdf;
+  border-top: 5px solid #f26b38;
+  border-left: 1px solid #dfdfdf;
+  border-right: 1px solid #dfdfdf;
+  border-bottom: 1px solid #dfdfdf;
+  padding: 20px;
 }
 
 .project-4 {
   grid-row: 2/3;
   grid-column: 2/3;
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 50px 170px 80px;
-  border: 1px solid #dfdfdf;
+  border-top: 5px solid #f26b38;
+  border-left: 1px solid #dfdfdf;
+  border-right: 1px solid #dfdfdf;
+  border-bottom: 1px solid #dfdfdf;
+  padding: 20px;
 }
 
 .tech-icons-container > a:hover {
-
 }
 .tech-icons {
-  width: 45px;
-  height: 45px;
+  width: 27px;
+  height: 27px;
   margin: 2%;
   /* padding: 2%; */
+}
+
+.tech-title {
+  font-size: 13px;
+  color: #757575;
+  font-weight: bolder;
 }
 
 .inc-width {
@@ -443,40 +466,128 @@ a {
   grid-row: 1/2;
 }
 
-.tech-stack-1{
+.tech-stack-1 {
   grid-row: 2/3;
 }
 
-.project-desc-1{
+.project-desc-1 {
   grid-row: 3/4;
   grid-column: 1/3;
+  text-align: justify;
+
 }
 
 .project-img-1 {
   grid-row: 1/3;
   grid-column: 2/3;
-  /* padding: 30px; */
-  width: 300px;
-  padding-top: 20%;
-  /* width: 250px; */
-  /* height: 280px; */
-  object-fit: cover;
+  width: 230px;
+  padding-top: 1%;
+  margin-left: 8%;
 }
 
 .project-img-2 {
   grid-row: 1/3;
   grid-column: 2/3;
   margin-left: 10%;
-  width: 220px;
+  width: 150px;
+  margin-left: 35%;
   /* height: 100px; */
 }
 
-.project-img-4{
+.project-img-4 {
   grid-row: 1/3;
   grid-column: 2/3;
-  margin-left: 10%;
-  width: 180px;
+  margin-left: 40%;
+  width: 150px;
 }
+
+.awards {
+  margin-top: 45%;
+  margin-left: 10%;
+}
+
+.awards-container {
+  display: grid;
+  height: 100vh;
+  grid-gap: 5%;
+  margin-top: 5%;
+  font-family: 'Roboto Mono';
+  grid-template-columns: repeat(2, 550px);
+  grid-template-rows: repeat(3, 300px);
+}
+
+.award-1 {
+  display: grid;
+  grid-template-columns: 350px 200px;
+  border-top: 5px solid #f26b38;
+  border-left: 1px solid #dfdfdf;
+  border-right: 1px solid #dfdfdf;
+  border-bottom: 1px solid #dfdfdf;
+}
+
+.award-2 {
+  display: grid;
+  grid-template-columns: 400px 150px;
+  border-top: 5px solid #f26b38;
+  border-left: 1px solid #dfdfdf;
+  border-right: 1px solid #dfdfdf;
+  border-bottom: 1px solid #dfdfdf;
+}
+.award-3 {
+  display: grid;
+  grid-template-columns: 400px 150px;
+  border-top: 5px solid #f26b38;
+  border-left: 1px solid #dfdfdf;
+  border-right: 1px solid #dfdfdf;
+  border-bottom: 1px solid #dfdfdf;
+}
+.award-4 {
+  display: grid;
+  grid-template-columns: 400px 150px;
+  border-top: 5px solid #f26b38;
+  border-left: 1px solid #dfdfdf;
+  border-right: 1px solid #dfdfdf;
+  border-bottom: 1px solid #dfdfdf;
+}
+.award-5 {
+  display: grid;
+  grid-template-columns: 400px 150px;
+  border-top: 5px solid #f26b38;
+  border-left: 1px solid #dfdfdf;
+  border-right: 1px solid #dfdfdf;
+  border-bottom: 1px solid #dfdfdf;
+}
+.award-6 {
+  display: grid;
+  grid-template-columns: 400px 150px;
+  border-top: 5px solid #f26b38;
+  border-left: 1px solid #dfdfdf;
+  border-right: 1px solid #dfdfdf;
+  border-bottom: 1px solid #dfdfdf;
+}
+
+.award-left-side {
+  grid-column: 1/2;
+}
+
+.award-left-side > h2 {
+  font-size: xx-large;
+}
+
+.award-right-side {
+  grid-column: 2/3;
+}
+
+.award-1:hover {
+
+}
+
+.award-img-1 {
+  margin-top: 48px;
+  width: 200px;
+  height: 200px;
+}
+
 
 /* ====== */
 .glitch {
