--- a/src/styles.css
+++ b/src/styles.css
@@ -366,10 +366,25 @@ a {
   font-size: 13px;
 }
 
+.cards-container {
+  margin-left: 20%;
+}
+
+.cards-grid {
+  display: grid;
+  grid-gap: 100px;
+  grid-template-columns: repeat(2,500px);
+  height: 250px;
+}
+
 .gh-card {
-  margin-left: 10%;
-  margin-bottom: 10%;
-  width: auto;
+  padding: 10%;
+  border: 3px dashed #f26b38;
+}
+
+.so-card {
+  padding: 5%;
+  border: 3px dashed #f26b38;
 }
 
 .projects {
@@ -476,7 +491,6 @@ a {
   grid-row: 3/4;
   grid-column: 1/3;
   text-align: justify;
-
 }
 
 .project-img-1 {
@@ -521,7 +535,7 @@ a {
 .award-1 {
   display: grid;
   grid-template-columns: 350px 400px;
-  
+
   border-top: 5px solid #f26b38;
   border-left: 1px solid #dfdfdf;
   border-right: 1px solid #dfdfdf;
@@ -638,6 +652,11 @@ figure:hover .show-img-1 {
   height: 250px;
 }
 
+.award-img-5 {
+  margin: 6%;
+  margin-left: 25%;
+}
+
 .award-title {
   text-transform: uppercase;
   font-size: 23px;
@@ -656,7 +675,6 @@ figure:hover .show-img-1 {
 .award-link > div {
   margin-top: 10%;
 }
-
 
 /* ====== */
 .glitch {
