--- a/src/styles.css
+++ b/src/styles.css
@@ -12,8 +12,9 @@ html {
 #about,
 #projects {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
+  top: 15%;
 }
 
 .dark-mode {
@@ -60,8 +61,12 @@ html {
 }
 
 .main-container {
-  width: 50%;
+  overflow: hidden;
+  position: relative;
+  width: 75%;
+  height: 100%;
   margin: 0 auto;
+  max-width: 1060px;
   border: 2px solid magenta;
 }
 
@@ -95,36 +100,24 @@ html {
 #nav-bar li {
   display: inline;
   float: right;
-  margin-right: 50px;
+  margin-right: 3%;
   list-style-type: none;
 }
 
 .nav-link a {
   float: left;
-  text-decoration: none;
   display: block;
   padding: 8px;
   color: black;
+  text-decoration: none !important;
 }
 
 li > a:hover {
   color: #f26b38;
 }
 
-a {
-  color: #f26b38;
-  text-decoration: none !important;
-}
-
 .about-desc {
-  /* justify-content: center; */
   align-self: center;
-}
-
-.nav ul {
-  padding-right: 20px;
-  margin-right: 100px;
-  text-align: right;
 }
 
 .container {
@@ -232,45 +225,41 @@ a {
   width: 45%;
 }
 
+.aboutMe {
+  /* display: relative; */
+  /* top: 5%; */
+}
+
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(6, minmax(100px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   grid-template-rows: 70px 100px 70px 70px;
-  /* repeat(3, minmax(1px, 0.1fr)); */
-  /* height: 100vh; */
-  grid-gap: 24px;
+  width: 100%;
+  height: 100vh;
 }
 
 .about-title-1 {
-  margin-top: 5%;
   grid-row: 1/2;
-  grid-column: 2/-2;
-  align-content: end;
-  justify-content: end;
+  grid-column: 1/-2;
+  align-self: center;
+  margin-left: 2%;
 }
-
-/* .about-title-1 > h3 {
-} */
 
 .img {
   grid-row: 2 / -1;
-  grid-column: 2/3;
-  justify-content: end;
-  justify-self: normal;
-  height: auto;
-  width: auto;
-  /* justify-items: right; */
+  grid-column: 1/3;
+  justify-content: center;
 }
 
 .my-pic-1 {
-  position: relative;
+  margin-left: 5%;
   border-radius: 50%;
-  height: 14rem;
-  /* width: inherit; */
+  width: 80%;
+  height: 70%;
 }
 .content-1 {
   grid-row: 2/4;
-  grid-column: 3/-2;
+  grid-column: 3/-1;
   justify-content: center;
   align-content: center;
   line-height: 35px;
@@ -279,29 +268,7 @@ a {
 .button-1 {
   grid-row: 4/-1;
   grid-column: 3/-2;
-
-  /* justify-content: center; */
 }
-
-/* 
-.links > a {
-  margin-left: 120px;
-  background-color: #f26b38;
-  border: none;
-  color: white;
-  padding: 8px;
-  text-align: center;
-  text-decoration: none;
-  border: 2px solid #fff;
-  border-radius: 8%;
-}
-
-.links > a:hover {
-  background-color: white;
-  color: #f26b38;
-  border: 1px solid #f26b38;
-}
-*/
 
 .button-1 > a {
   background-color: #f26b38;
@@ -470,8 +437,6 @@ a {
   padding: 20px;
 }
 
-.tech-icons-container > a:hover {
-}
 .tech-icons {
   width: 27px;
   height: 27px;
