--- a/src/styles.css
+++ b/src/styles.css
@@ -8,14 +8,14 @@ html {
   scroll-behavior: smooth;
 }
 
-#home,
-#about,
-#projects {
+#home {
   position: relative;
   width: 100%;
   height: 100vh;
   top: 15%;
 }
+/* #about,
+#projects  */
 
 .dark-mode {
   background-color: #4e4e4c;
@@ -166,17 +166,13 @@ li > a:hover {
 .about-me {
   font-family: 'Roboto Mono';
   font-size: small;
-  /* margin-left: 20%; */
 }
 
 .links {
-  /* margin-left: 10%; */
-  /* margin: 2%; */
   padding-top: 3%;
 }
 
 .links > a {
-  /* margin-left: 120px; */
   background-color: #f26b38;
   border: none;
   color: white;
@@ -184,7 +180,6 @@ li > a:hover {
   text-align: center;
   text-decoration: none;
   border: 2px solid #fff;
-  /* border-radius: 8%; */
 }
 
 .links > a:hover {
@@ -225,17 +220,17 @@ li > a:hover {
   width: 45%;
 }
 
-.aboutMe {
-  /* display: relative; */
-  /* top: 5%; */
+.aboutMe-container {
+  position: relative;
+  top: 5%;
+  height: min-content;
 }
 
 .grid-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  grid-template-rows: 70px 100px 70px 70px;
+  grid-template-rows: 70px repeat(2, minmax(0, 1fr)) 70px;
   width: 100%;
-  height: 100vh;
 }
 
 .about-title-1 {
@@ -268,6 +263,7 @@ li > a:hover {
 .button-1 {
   grid-row: 4/-1;
   grid-column: 3/-2;
+  align-self: center;
 }
 
 .button-1 > a {
@@ -289,15 +285,16 @@ li > a:hover {
   /* padding-top: 10%; */
 }
 
+.exp-and-edu {
+  position: relative;
+  top: 5%;
+}
+
 .col-2-container {
   display: grid;
-  height: auto;
-  margin: 10%;
-  margin-bottom: 5%;
   grid-template-columns: 1fr 1fr;
-  grid-row: repeat(7, 10px);
   grid-gap: 10px;
-  /* border: 5px solid goldenrod; */
+  /* position: absolute; */
 }
 
 .small-box {
@@ -318,7 +315,7 @@ li > a:hover {
   font-family: 'Roboto Mono';
   font-weight: bolder;
   border-left: 1px solid #f26b38;
-  height: 69%;
+  /* height: 69%; */
 }
 
 .experience > h3,
@@ -366,19 +363,23 @@ li > a:hover {
 
 .projects {
   position: relative;
-  margin-top: 15%;
-  margin-left: 10%;
+  /* margin-top: 15%; */
+  /* margin-left: 10%; */
   font-family: 'Roboto Mono';
+  /* font-size: ; */
 }
 
 .projects-container {
   display: grid;
-  height: 100vh;
+  /* height: 100vh; */
   grid-gap: 5%;
   margin-top: 5%;
   /* width: 75%; */
   grid-template-columns: repeat(2, 550px);
   grid-template-rows: repeat(2, 350px);
+  position: absolute;
+  top: 100%;
+  bottom: 0;
 }
 
 /* [class*='project-'] {
@@ -493,9 +494,8 @@ li > a:hover {
 }
 
 .awards {
-  margin-top: 45%;
   display: relative;
-  margin-left: 5%;
+  margin-left: 2%;
 }
 
 .awards-container {
@@ -504,13 +504,13 @@ li > a:hover {
   grid-gap: 2%;
   margin-top: 5%;
   font-family: 'Roboto Mono';
-  grid-template-columns: repeat(2, 750px);
+  grid-template-columns: repeat(2, 500px);
   grid-template-rows: repeat(3, 350px);
 }
 
 .award-1 {
   display: grid;
-  grid-template-columns: 350px 400px;
+  grid-template-columns: 200px 300px;
 
   border-top: 5px solid #f26b38;
   border-left: 1px solid #dfdfdf;
@@ -520,7 +520,7 @@ li > a:hover {
 
 .award-2 {
   display: grid;
-  grid-template-columns: 350px 400px;
+  grid-template-columns: 200px 300px;
   border-top: 5px solid #f26b38;
   border-left: 1px solid #dfdfdf;
   border-right: 1px solid #dfdfdf;
@@ -528,7 +528,7 @@ li > a:hover {
 }
 .award-3 {
   display: grid;
-  grid-template-columns: 350px 400px;
+  grid-template-columns: 200px 300px;
   border-top: 5px solid #f26b38;
   border-left: 1px solid #dfdfdf;
   border-right: 1px solid #dfdfdf;
@@ -536,7 +536,7 @@ li > a:hover {
 }
 .award-4 {
   display: grid;
-  grid-template-columns: 350px 400px;
+  grid-template-columns: 200px 300px;
   border-top: 5px solid #f26b38;
   border-left: 1px solid #dfdfdf;
   border-right: 1px solid #dfdfdf;
@@ -544,7 +544,7 @@ li > a:hover {
 }
 .award-5 {
   display: grid;
-  grid-template-columns: 350px 400px;
+  grid-template-columns: 200px 300px;
   border-top: 5px solid #f26b38;
   border-left: 1px solid #dfdfdf;
   border-right: 1px solid #dfdfdf;
@@ -552,7 +552,7 @@ li > a:hover {
 }
 .award-6 {
   display: grid;
-  grid-template-columns: 350px 400px;
+  grid-template-columns: 200px 300px;
   border-top: 5px solid #f26b38;
   border-left: 1px solid #dfdfdf;
   border-right: 1px solid #dfdfdf;
@@ -562,10 +562,7 @@ li > a:hover {
 .award-left-side {
   grid-column: 1/2;
   padding: 10%;
-}
-
-.award-left-side > h2 {
-  font-size: xx-large;
+  font-size: 15px;
 }
 
 .award-right-side {
@@ -580,13 +577,12 @@ figure {
 .show-img-1 {
   display: none;
   position: absolute;
-  width: 400px;
+  width: 300px;
   height: 344px;
   padding: 10%;
   left: 0;
   bottom: 0;
   right: 0;
-  /* background-color: rgba(0,0,0,.15); */
 }
 
 figure:hover img {
@@ -598,44 +594,37 @@ figure:hover .show-img-1 {
 }
 
 .award-img-1 {
-  /* margin-top: 48px; */
   padding: 10%;
-  width: 400px;
+  width: 300px;
   height: 344px;
 }
 
 .award-img-2 {
-  /* margin-top: 48px; */
   margin-left: 10%;
   padding: 10%;
-  width: 350px;
+  width: 300px;
   height: 280px;
 }
 
 .award-img-3 {
-  /* margin: 15%; */
   margin-top: 20%;
-  margin-left: 5%;
-  /* padding: 15%; */
-  width: 350px;
+  width: 295px;
   height: 150px;
 }
 
 .award-img-4 {
-  margin-left: 3%;
   margin-top: 12%;
-  width: 380px;
+  width: 290px;
   height: 250px;
 }
 
 .award-img-5 {
   margin: 6%;
-  margin-left: 25%;
 }
 
 .award-title {
   text-transform: uppercase;
-  font-size: 23px;
+  font-size: 18px;
   color: #757575;
   font-weight: bolder;
 }
