--- a/src/styles.css
+++ b/src/styles.css
@@ -14,8 +14,13 @@ html {
   height: 100vh;
   top: 15%;
 }
-/* #about,
-#projects  */
+
+#about,
+#awards,
+#projects {
+  /* position: static; */
+  padding-top: 8%;
+}
 
 .dark-mode {
   background-color: #4e4e4c;
@@ -49,7 +54,7 @@ html {
   width: 100vw;
   top: 0;
   z-index: 1000;
-  position: fixed;
+  position: sticky;
 }
 
 .bottom-line {
@@ -222,7 +227,7 @@ li > a:hover {
 
 .aboutMe-container {
   position: relative;
-  top: 5%;
+  top: 10%;
   height: min-content;
 }
 
@@ -294,7 +299,8 @@ li > a:hover {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 10px;
-  /* position: absolute; */
+  position: relative;
+  top: 125%;
 }
 
 .small-box {
@@ -341,12 +347,15 @@ li > a:hover {
 }
 
 .cards-container {
-  margin-left: 20%;
+  /* margin-left: 20%; */
+  position: relative;
+  top: 395%;
+  bottom: 0%;
 }
 
 .cards-grid {
   display: grid;
-  grid-gap: 100px;
+  grid-gap: 5%;
   grid-template-columns: repeat(2, 500px);
   height: 250px;
 }
@@ -363,23 +372,22 @@ li > a:hover {
 
 .projects {
   position: relative;
-  /* margin-top: 15%; */
-  /* margin-left: 10%; */
+  margin-left: 2%;
   font-family: 'Roboto Mono';
-  /* font-size: ; */
+  margin-top: 2%;
 }
 
 .projects-container {
   display: grid;
-  /* height: 100vh; */
-  grid-gap: 5%;
+  height: 100vh;
+  grid-gap: 2%;
   margin-top: 5%;
   /* width: 75%; */
-  grid-template-columns: repeat(2, 550px);
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   grid-template-rows: repeat(2, 350px);
-  position: absolute;
-  top: 100%;
-  bottom: 0;
+  /* position: relative; */
+  /* top: 150%; */
+  /* bottom: 1px; */
 }
 
 /* [class*='project-'] {
@@ -480,9 +488,9 @@ li > a:hover {
 .project-img-2 {
   grid-row: 1/3;
   grid-column: 2/3;
-  margin-left: 10%;
+  /* margin-left: 10%; */
   width: 150px;
-  margin-left: 35%;
+  /* margin-left: 35%; */
   /* height: 100px; */
 }
 
@@ -494,8 +502,9 @@ li > a:hover {
 }
 
 .awards {
-  display: relative;
+  position: relative;
   margin-left: 2%;
+  margin-top: 2%;
 }
 
 .awards-container {
@@ -504,14 +513,14 @@ li > a:hover {
   grid-gap: 2%;
   margin-top: 5%;
   font-family: 'Roboto Mono';
-  grid-template-columns: repeat(2, 500px);
-  grid-template-rows: repeat(3, 350px);
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  grid-template-rows: repeat(3, minmax(0, 1fr));
 }
 
 .award-1 {
   display: grid;
   grid-template-columns: 200px 300px;
-
+  border-radius: 5%;
   border-top: 5px solid #f26b38;
   border-left: 1px solid #dfdfdf;
   border-right: 1px solid #dfdfdf;
@@ -576,7 +585,7 @@ figure {
 
 .show-img-1 {
   display: none;
-  position: absolute;
+  position: relative;
   width: 300px;
   height: 344px;
   padding: 10%;
@@ -600,9 +609,7 @@ figure:hover .show-img-1 {
 }
 
 .award-img-2 {
-  margin-left: 10%;
-  padding: 10%;
-  width: 300px;
+  width: 295px;
   height: 280px;
 }
 
@@ -642,7 +649,7 @@ figure:hover .show-img-1 {
 }
 
 .tech-stack-container {
-  display: relative;
+  position: relative;
   width: 100vw;
   height: 100px;
 }
