--- a/src/styles.css
+++ b/src/styles.css
@@ -66,7 +66,7 @@ html {
 }
 
 .main-container {
-  overflow: hidden;
+  /* overflow: hidden; */
   position: relative;
   width: 75%;
   height: 100%;
@@ -263,81 +263,78 @@ li > a:hover {
   /* margin-left: 2%; */
   font-family: 'Roboto Mono';
   /* margin-top: 2%; */
-  margin: 2% 0 2% 2%;
+  margin: 2% 0 2% 0%;
+  width: 100%;
+  height: 100%;
+  /* margin-bottom: 3%; */
 }
 
-.projects-container {
+.projects > h3 {
+  margin-left: 3%;
+}
+
+/* .projects-container {
   display: grid;
-  /* display: flex; */
-  /* flex: 50%; */
-  /* align-items: center; */
-  /* height: 100vh; */
   grid-gap: 2%;
   margin-top: 5%;
-  /* flex-direction: row; */
-  /* flex-wrap: wrap; */
   grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   grid-template-rows: repeat(2, 350px);
+} */
+
+.projects-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 2%; 
 }
 
-
-.project-1 {
-  grid-row: 1/2;
-  grid-column: 1/2;
+.projects-container > .project-1,
+.projects-container > .project-2,
+.projects-container > .project-3,
+.projects-container > .project-4 {
+  flex:1;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 50px minmax(50px, 1fr) 80px;
+  width: max-content;
+  grid-template-columns: repeat(2, minmax(203px,1fr));
+  grid-template-rows: repeat(3, minmax(50px, 1fr));
   border-top: 5px solid #f26b38;
   border-left: 1px solid #dfdfdf;
   border-right: 1px solid #dfdfdf;
   border-bottom: 1px solid #dfdfdf;
   padding: 20px;
+  border-radius: 5%;
+}
+
+.project-1 {
+  margin: 1%;
+  grid-row: 1/2;
+  grid-column: 1/2;
+
 }
 
 .project-2 {
+  margin: 1%;
   grid-row: 1/2;
   grid-column: 2/3;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 50px minmax(50px, 1fr) 80px;
-  border-top: 5px solid #f26b38;
-  border-left: 1px solid #dfdfdf;
-  border-right: 1px solid #dfdfdf;
-  border-bottom: 1px solid #dfdfdf;
-  padding: 20px;
 }
 
 .project-3 {
+  margin: 1%;
   grid-row: 2/3;
   grid-column: 1/2;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 50px minmax(50px, 1fr) 80px;
-  border-top: 5px solid #f26b38;
-  border-left: 1px solid #dfdfdf;
-  border-right: 1px solid #dfdfdf;
-  border-bottom: 1px solid #dfdfdf;
-  padding: 20px;
 }
 
 .project-4 {
+  margin: 1%;
   grid-row: 2/3;
   grid-column: 2/3;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 50px minmax(50px, 1fr) 80px;
-  border-top: 5px solid #f26b38;
-  border-left: 1px solid #dfdfdf;
-  border-right: 1px solid #dfdfdf;
-  border-bottom: 1px solid #dfdfdf;
-  padding: 20px;
 }
 
 .tech-icons {
   width: 27px;
   height: 27px;
   margin: 2%;
-  /* padding: 2%; */
 }
 
 .tech-title {
@@ -352,6 +349,8 @@ li > a:hover {
 
 .project-title-1 {
   grid-row: 1/2;
+  font-size: 2em;
+  align-self: center;
 }
 
 .tech-stack-1 {
@@ -368,30 +367,34 @@ li > a:hover {
   grid-row: 1/3;
   grid-column: 2/3;
   width: 230px;
-  padding-top: 1%;
-  margin-left: 8%;
+  margin: 3%;
+  justify-self: flex-end;
+  align-self: flex-start;
 }
 
 .project-img-2 {
   grid-row: 1/3;
   grid-column: 2/3;
-  /* margin-left: 10%; */
+  justify-self: flex-end;
+  align-self: flex-start;
+  margin: 4%;
   width: 150px;
-  /* margin-left: 35%; */
-  /* height: 100px; */
 }
 
 .project-img-4 {
   grid-row: 1/3;
   grid-column: 2/3;
-  margin-left: 40%;
+  margin: 4%;
   width: 150px;
+  justify-self: flex-end;
+  align-self: flex-start;
 }
 
 .awards {
   position: relative;
   margin-left: 2%;
   margin-top: 2%;
+  display: none;
 }
 
 .awards-container {
