--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,6 @@ html {
   filter: invert(1) heu-rotate(180deg);
 }
 
-
 .left-line {
   border-left: 30px solid #f26b38;
   height: 100vh;
@@ -227,7 +226,8 @@ li > a:hover {
 .awards > h3 {
   display: inline;
   font-size: 13px;
-  font-family: 'Roboto Mono';
+  margin-left: 3%;
+ font-family: 'Roboto Mono';
   box-shadow: inset 0 -6px 0px #ede574;
 }
 
@@ -266,7 +266,7 @@ li > a:hover {
 }
 .so-card {
   /* display: inline; */
-  flex:1;
+  flex: 1;
   margin: 2%;
 }
 
@@ -285,18 +285,10 @@ li > a:hover {
 }
 
 .projects {
-  position: relative;
-  /* margin-left: 2%; */
   font-family: 'Roboto Mono';
-  /* margin-top: 2%; */
   margin: 2% 0 2% 0%;
   width: 100%;
   height: 100%;
-  /* margin-bottom: 3%; */
-}
-
-.projects > h3 {
-  margin-left: 3%;
 }
 
 /* .projects-container {
@@ -312,17 +304,17 @@ li > a:hover {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 2%; 
+  margin: 2%;
 }
 
 .projects-container > .project-1,
 .projects-container > .project-2,
 .projects-container > .project-3,
 .projects-container > .project-4 {
-  flex:1;
+  flex: 1;
   display: grid;
   width: max-content;
-  grid-template-columns: repeat(2, minmax(203px,1fr));
+  grid-template-columns: repeat(2, minmax(203px, 1fr));
   grid-template-rows: repeat(3, minmax(50px, 1fr));
   border-top: 5px solid #f26b38;
   border-left: 1px solid #dfdfdf;
@@ -330,13 +322,12 @@ li > a:hover {
   border-bottom: 1px solid #dfdfdf;
   padding: 20px;
   border-radius: 5%;
+  margin: 1%;
 }
 
-.project-1 {
-  margin: 1%;
+/* .project-1 {
   grid-row: 1/2;
   grid-column: 1/2;
-
 }
 
 .project-2 {
@@ -355,7 +346,7 @@ li > a:hover {
   margin: 1%;
   grid-row: 2/3;
   grid-column: 2/3;
-}
+} */
 
 .tech-icons {
   width: 27px;
@@ -417,92 +408,94 @@ li > a:hover {
 }
 
 .awards {
-  position: relative;
-  margin-left: 2%;
-  margin-top: 2%;
+  font-family: 'Roboto Mono';
+  margin: 2% 0 2% 0%;
+  width: 100%;
+  height: 100%;
 }
 
 .awards-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 2%;
+}
+
+/* .awards-container {
   display: grid;
   grid-gap: 2%;
   margin-top: 5%;
   font-family: 'Roboto Mono';
   grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   grid-template-rows: repeat(3, minmax(0, 1fr));
-}
+} */
 
-.award-1 {
+.awards-container > .award-1,
+.awards-container > .award-2,
+.awards-container > .award-3,
+.awards-container > .award-4,
+.awards-container > .award-5,
+.awards-container > .award-6 {
+  flex: 1;
   display: grid;
-  grid-template-columns: 200px 300px;
-  border-radius: 5%;
+  width: 100%;
+  grid-template-columns: repeat(2, minmax(203px, 1fr));
   border-top: 5px solid #f26b38;
   border-left: 1px solid #dfdfdf;
   border-right: 1px solid #dfdfdf;
   border-bottom: 1px solid #dfdfdf;
+  padding: 20px;
+  border-radius: 5%;
+  margin: 0.5%;
+}
+
+/* .award-1 {
 }
 
 .award-2 {
-  display: grid;
+  margin: 1%;
   grid-template-columns: 200px 300px;
-  border-top: 5px solid #f26b38;
-  border-left: 1px solid #dfdfdf;
-  border-right: 1px solid #dfdfdf;
-  border-bottom: 1px solid #dfdfdf;
 }
 .award-3 {
-  display: grid;
+  margin: 1%;
   grid-template-columns: 200px 300px;
-  border-top: 5px solid #f26b38;
-  border-left: 1px solid #dfdfdf;
-  border-right: 1px solid #dfdfdf;
-  border-bottom: 1px solid #dfdfdf;
 }
 .award-4 {
-  display: grid;
+  margin: 1%;
   grid-template-columns: 200px 300px;
-  border-top: 5px solid #f26b38;
-  border-left: 1px solid #dfdfdf;
-  border-right: 1px solid #dfdfdf;
-  border-bottom: 1px solid #dfdfdf;
 }
 .award-5 {
-  display: grid;
+  margin: 1%;
   grid-template-columns: 200px 300px;
-  border-top: 5px solid #f26b38;
-  border-left: 1px solid #dfdfdf;
-  border-right: 1px solid #dfdfdf;
-  border-bottom: 1px solid #dfdfdf;
 }
 .award-6 {
-  display: grid;
+  margin: 1%;
   grid-template-columns: 200px 300px;
-  border-top: 5px solid #f26b38;
-  border-left: 1px solid #dfdfdf;
-  border-right: 1px solid #dfdfdf;
-  border-bottom: 1px solid #dfdfdf;
-}
+} */
 
 .award-left-side {
   grid-column: 1/2;
-  padding: 10%;
+  padding: 5%;
   font-size: 16px;
 }
 
 .award-right-side {
   grid-column: 2/3;
+  display: grid;
 }
 
-figure {
+/* figure {
   position: relative;
-  display: inline-block;
+  display: inline-grid;
 }
 
 .show-img-1 {
   display: none;
   position: absolute;
-  width: 300px;
-  height: 290px;
-  padding: 5%;
+  width: 230px;
+  height: 300px;
+  padding: 2%;
   left: 0;
   bottom: 0;
   right: 0;
@@ -515,39 +508,45 @@ figure:hover img {
 
 figure:hover .show-img-1 {
   display: block;
-}
+} */
 
 .award-img-1 {
-  padding: 5%;
-  margin-top: 1%;
-  width: 300px;
-  height: 290px;
+  padding: 2%;
+  margin-top: 5%;
+  width: 210px;
+  height: 300px;
   border-radius: 10%;
+  justify-self: flex-end;
+  align-self: flex-start;
 }
 
 .award-img-2 {
-  width: 295px;
-  height: 280px;
+  justify-self: flex-end;
+  align-self: flex-start;
+  margin-top: 4%;
+  width: 230px;
+  height: 180px;
 }
 
 .award-img-3 {
-  margin-top: 20%;
-  width: 295px;
-  height: 150px;
+  margin-top: 10%;
+  width: 215px;
+  height: 130px;
+  justify-self: flex-end;
+  align-self: flex-start;
 }
 
 .award-img-4 {
-  margin-top: 10%;
-  width: 290px;
-  height: 250px;
-  border-radius: 10%;
-  object-fit: cover;
-  object-position: 35%;
+  width: 200px;
+  height: 200px;
+  justify-self: flex-end;
+  align-self: flex-start;
 }
 
 .award-img-5 {
-  /* margin: 1%; */
-  margin-left: 1em;
+  width: 200px;
+  justify-self: flex-end;
+  align-self: flex-start;
 }
 
 .award-title {
@@ -587,7 +586,7 @@ figure:hover .show-img-1 {
     left: 0;
     z-index: 1000;
   }
-  
+
   .right-line {
     border-right: 10px solid #f26b38;
     height: 100vh;
@@ -595,7 +594,7 @@ figure:hover .show-img-1 {
     right: 0;
     z-index: 1000;
   }
-  
+
   .top-line {
     border-top: 10px solid #f26b38;
     width: 100%;
@@ -603,7 +602,7 @@ figure:hover .show-img-1 {
     z-index: 1000;
     position: sticky;
   }
-  
+
   .bottom-line {
     border-bottom: 10px solid #f26b38;
     width: 100%;
@@ -611,9 +610,14 @@ figure:hover .show-img-1 {
     z-index: 1000;
     position: fixed;
   }
+
+  .project-title-1 {
+    grid-row: 1/2;
+    font-size: 1.5em;
+    justify-content: flex-start;
+    align-self: flex-start;
+  }
 }
-
-
 
 /* ====== */
 .glitch {
