--- a/src/styles.css
+++ b/src/styles.css
@@ -66,7 +66,7 @@ html {
   height: 100%;
   margin: 0 auto;
   max-width: 1060px;
-  border: 2px solid magenta;
+  /* border: 2px solid magenta; */
 }
 
 .child-center {
@@ -96,11 +96,8 @@ html {
   position: fixed;
   height: 50px;
   width: 100%;
-  top: 3%;
   right: 0;
   z-index: 100;
-  padding: 2%;
-  margin-right: 3rem;
 }
 
 .nav > .nav-btn {
@@ -109,14 +106,15 @@ html {
 
 .nav > .nav-links {
   display: flex;
-  flex-direction: row;
-  float: right;
-  font-size: 18px;
+  align-items: flex-end;
+  font-size: 1em;
+  font-family: 'Roboto Mono';
+  flex: 1;
+  justify-content: flex-end;
+  margin-right: 30px;
 }
 
 .nav > .nav-links > a {
-  flex: 1;
-  /* display: inline-block; */
   padding: 13px 10px 13px 10px;
   text-decoration: none;
   color: #000;
@@ -124,7 +122,6 @@ html {
 
 .nav > .nav-links > a:hover {
   color: #f26b38;
-  /* background-color: rgba(0, 0, 0, 0.3); */
 }
 
 .nav > #nav-check {
