make it responsive

--- a/src/styles.css
+++ b/src/styles.css
@@ -416,7 +416,7 @@ li > a:hover {
   flex: 1;
   display: grid;
   width: max-content;
-  grid-template-columns: repeat(2, minmax(203px, 1fr));
+  grid-template-columns: repeat(2, minmax(200px, 1fr));
   grid-template-rows: repeat(3, minmax(50px, 1fr));
   border-top: 5px solid #f26b38;
   border-left: 1px solid #dfdfdf;
@@ -485,8 +485,10 @@ li > a:hover {
 .project-img-1 {
   grid-row: 1/3;
   grid-column: 2/3;
-  width: 230px;
+  width: 100%;
+  height: auto;
   margin: 3%;
+  padding: 7%;
   justify-self: flex-end;
   align-self: flex-start;
 }
@@ -497,14 +499,16 @@ li > a:hover {
   justify-self: flex-end;
   align-self: flex-start;
   margin: 4%;
-  width: 150px;
+  width: 100%;
+  height: auto;
 }
 
 .project-img-4 {
   grid-row: 1/3;
   grid-column: 2/3;
   margin: 4%;
-  width: 150px;
+  width: 100%;
+  height: auto;
   justify-self: flex-end;
   align-self: flex-start;
 }
@@ -542,7 +546,7 @@ li > a:hover {
   flex: 1;
   display: grid;
   width: 100%;
-  grid-template-columns: repeat(2, minmax(203px, 1fr));
+  grid-template-columns: repeat(2, minmax(211px, 1fr));
   border-top: 5px solid #f26b38;
   border-left: 1px solid #dfdfdf;
   border-right: 1px solid #dfdfdf;
@@ -615,8 +619,8 @@ figure:hover .show-img-1 {
 .award-img-1 {
   padding: 2%;
   margin-top: 5%;
-  width: 210px;
-  height: 300px;
+  width: 100%;
+  height: auto;
   border-radius: 10%;
   justify-self: flex-end;
   align-self: flex-start;
@@ -626,27 +630,28 @@ figure:hover .show-img-1 {
   justify-self: flex-end;
   align-self: flex-start;
   margin-top: 4%;
-  width: 230px;
-  height: 180px;
+  width: 100%;
+  height: auto;
 }
 
 .award-img-3 {
   margin-top: 10%;
-  width: 215px;
-  height: 130px;
+  width: 100%;
+  height: auto;
   justify-self: flex-end;
   align-self: flex-start;
 }
 
 .award-img-4 {
-  width: 200px;
-  height: 200px;
+  width: 100%;
+  height: auto;
   justify-self: flex-end;
   align-self: flex-start;
 }
 
 .award-img-5 {
-  width: 200px;
+  width: 100%;
+  height: auto;
   justify-self: flex-end;
   align-self: flex-start;
 }
@@ -785,23 +790,60 @@ figure:hover .show-img-1 {
   .awards > h3 {
     display: inline;
     font-size: 13px;
-    margin-left: 0.5%;
+    margin-left: 6%;
     font-family: 'Roboto Mono';
     box-shadow: inset 0 -6px 0px #ede574;
   }
 
+  .awards-container, 
+  .projects-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 2%;
+    padding: 3%;
+  }
+  
   .awards-container > .award-1,
   .awards-container > .award-2,
   .awards-container > .award-3,
   .awards-container > .award-4,
   .awards-container > .award-5,
   .awards-container > .award-6 {
-    margin: 2%;
-    padding: 3px;
+    flex: 1;
+    display: grid;
+    width: max-content;
+    grid-template-columns: repeat(2, minmax(100px, 1fr));
+    border-top: 5px solid #f26b38;
+    border-left: 1px solid #dfdfdf;
+    border-right: 1px solid #dfdfdf;
+    border-bottom: 1px solid #dfdfdf;
+    padding: 5%;
+    border-radius: 5%;
+    margin: 0.5%;
   }
 
   .award-left-side {
     font-size: 12px;
+  }
+ 
+  .projects-container > .project-1,
+  .projects-container > .project-2,
+  .projects-container > .project-3,
+  .projects-container > .project-4 {
+    flex: 1;
+    display: grid;
+    width: max-content;
+    grid-template-columns: repeat(2, minmax(100px, 1fr));
+    grid-template-rows: repeat(3, minmax(50px, 1fr));
+    border-top: 5px solid #f26b38;
+    border-left: 1px solid #dfdfdf;
+    border-right: 1px solid #dfdfdf;
+    border-bottom: 1px solid #dfdfdf;
+    padding: 5%;
+    border-radius: 5%;
+    margin: 1%;
   }
 
   .project-title-1 {
