--- a/src/styles.css
+++ b/src/styles.css
@@ -152,12 +152,10 @@ html {
 }
 
 .nav-links > ul > li {
-  margin: 2% 2% 0 0;
-  align-self: flex-end;
+  margin: 10px 30px 0 0;
 }
 
 .nav-links > ul > li > a {
-  padding: 13px 10px 13px 10px;
   color: #000;
 }
 
